Began implementing the UserController.java mehtods, working on making them work with the yaml file definitions
